# zit_test_task

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflow/: ci.yml
config/: .env.template
docker/: dockerfile
docker/common_scripts/: entrypoint.sh
docker/http_scripts/: entrypoint.sh  start.sh
src/: main_http.py
src/infra/containers/: __init__.py  di.py
src/infra/dto/: __init__.py  page.py  product.py  product_type.py
src/infra/dto/model/: __init__.py  datetime.py  printable_str.py
src/infra/migration/: env.py
src/infra/migration/versions/: 24f57e16d91b_.py  777065e4497f_.py
src/infra/settings/: __init__.py  app.py  postgres.py
src/presentation/http/v1/: __init__.py  healthcheck.py  product.py  product_type.py
src/presentation/http/v1/exception/: __init__.py  base.py
src/presentation/http/v1/queries/: __init__.py  base.py  product.py  product_type.py
src/repository/: __init__.py  product.py  product_type.py  uow.py
src/repository/exception/: __init__.py  alredy_exist.py
src/repository/orm/: __init__.py  product.py  product_type.py
src/repository/orm/utils/: __init__.py
src/repository/utils/: __init__.py  build_filters.py
src/services/: __init__.py  product.py  product_type.py
tests/end_to_end/: conftest.py
tests/end_to_end/product/: test_create.py  test_get_by_filter.py  test_get_by_id.py
tests/end_to_end/product_type/: test_create.py  test_get_by_filter.py
tests/schemathesis/: conftest.py  test_shemathesis.py
