[tool.poetry]
name = "zit-test-task"
version = "0.1.0"
description = ""
authors = ["deska13"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
pydantic = "^2.9.1"
sqlalchemy = "^2.0.34"
uvicorn = "^0.30.6"
dishka = "^1.3.0"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.3.0"}
pylint = "^2.17.4"
mypy = "^1.3.0"


[tool.poetry.group.tests.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"
schemathesis = "^3.35.5"
testcontainers = "^4.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["tests"]
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
known_first_party = ["src"]
skip = []

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| docker
| config
| temp
)/
'''